# sp2en

./: LICENSE  README.md  publish_pypi.sh  pyproject.toml
MkFs/: Makefile
YMLs/: sp2en.yml
rules/julia/: news.literal.txt  news.txt  olds.txt
rules/markdown/: olds_literal.txt
src/sp2en/: cli.py
src/sp2en/rules/julia/: olds_literal.txt
src/sp2en/rules/markdown/: news.literal.txt
