[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sp2en"
version = "0.1.2"
description = "swap spanish 2english"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Santt997", email = "santiago.burastero@gmail.com" },
]

keywords = ["sp", "en", "spanish", "english"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Environment :: Console",
]

requires-python = ">=3.14"

[project.scripts]
sp2en = "sp2en.cli:main"
sp2en-cli = "sp2en.cli:main"

[project.urls]
Homepage = "https://github.com/Santt997/sp2en"
Repository = "https://github.com/Santt997/sp2en"
"Bug Tracker" = "https://github.com/Santt997/sp2en/issues"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["sp2en"]